<resources>
    <string name="app_name">MY BOOKING</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="calendar">Calendar</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="check_in">Check-in</string>
    <string name="placeholder_date1">22/11/2021</string>
    <string name="placeholder_date2">23/11/2021</string>
    <string name="check_out">Check-out</string>
    <string name="date_picker_one">Date Picker One</string>
    <string name="total">Total: </string>
    <string name="vat">VAT: </string>
    <string name="book">Book</string>
    <string name="cash_5">$5</string>
    <string name="large_text">Implement the missing code, denoted by ellipses.
        You may not modify the pre-existing code.
Implement a function that, given an integer n, uses a specific method on it and returns the number of bits in its binary representation.</string>
    <string name="room_image">Room Image</string>
    <string name="deluxe_room">Deluxe Room</string>
    <string name="nbr_person">1 Person</string>
    <string name="price">$150</string>
    <string name="price1">$100</string>
    <string name="pric2">$180</string>
    <string name="per_day">/day</string>
    <string name="quantity">Quantity</string>
    <string name="remove">Remove</string>
    <string name="_1">1</string>
    <string name="suite_room">Suite Room</string>
    <string name="grande_room">Grande Room</string>
    <string name="pres_room">Presidential Room</string>
    <string name="royal_room">Royal Room</string>
    <string name="refresh">Refresh</string>
    <string name="kings_room">King\'s Room</string>
    <string name="welcome_to_listview_activity">Welcome to ListViewActivity</string>
    <string name="age">Student Age</string>
    <string name="name">Student Name</string>
    <string name="nbr_person2">2 Persons</string>
    <string name="student_image">Student Image</string>
</resources>